Implement clients get, post, delete
